# project

./: .gitignore  API_DOCUMENTATION.md  BOOKING_LOGIC_IMPROVEMENTS.md  CMakeLists.txt  DATABASE_MANAGEMENT.md  DATE_FORMAT_FIX_SUMMARY.md  DEPARTURE_TIME_COMPLETE_SUMMARY.md  DEPARTURE_TIME_UPDATE.md  FINAL_DATE_FIX_SUMMARY.md  MySQL测试指南.md  PROJECT_SUMMARY.md  QT_LAYOUT_OPTIMIZATION_SUMMARY.md  QT_ORDER_PRICE_FIX_SUMMARY.md  Qt价格显示修复说明.md  Qt客户端问题分析和解决方案.md  Qt布局优化测试说明.md  README.md  README_FAKE_SERVER.md  SEARCH_SCHEDULE_COMPLETE.md  TIMEZONE_FIX_COMPLETE_SUMMARY.md  back-end.js  booking-system-remote.html  booking-system.html  check_d311.js  compile_fake_server.bat  configure-mysql-password.js  fake_server.cpp  fix_d311_carriages.js  fix_database_structure.js  manage_database.js  mysql-password-reset-guide.md  mysql-quick-test.js  mysql-reset-password-complete.bat  mysql-reset-password-complete.ps1  mysql-test.html  package-lock.json  package.json  quick-start.bat  reset-mysql-password.bat  run_booking_test.bat  (+21 more)
TrainBookingClient/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  README.md  build.bat  build_simple.bat  main.cpp
report/: 项目总结报告.docx
